# ecash-intent-llm

./: Dockerfile  Makefile  README.md  pyproject.toml
config/: inference_config.yaml  train_config.yaml
scripts/: download_data.sh
src/ecash_intent_llm/: api.py  dataset.py  eval.py  model.py  schema.py  train.py  utils.py
tests/: test_schema.py
