[project]
name = "ecash-intent-llm"
version = "0.1.0"
description = "Fine-tuned LLM for parsing financial intents into executable JSON instructions for EasyCash protocol."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.1.0",
    "transformers>=4.38.0",
    "peft>=0.10.0",
    "datasets>=2.18.0",
    "accelerate>=0.27.0",
    "bitsandbytes>=0.42.0",
    "pydantic>=2.6.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.27.0",
    "python-dotenv>=1.0.0",
    "typer>=0.9.0",
    "trl>=0.8.0",
    "instructor>=1.0.0",
    "scipy>=1.12.0",
    "einops>=0.7.0",
    "tiktoken>=0.6.0"
]

[project.scripts]
ecash-llm = "ecash_intent_llm.main:app"

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "black>=23.0.0"
]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.mypy]
python_version = "3.10"
strict = true
